<resources>
    <string name="app_name">Garanti Not Defterim</string>
    <string name="mynotebook">Not Defterim</string>
    <string name="login">Giriş</string>
    <string name="signup">Üye Ol</string>
    <string name="welcomeback">Merhaba</string>
    <string name="password">Şifre</string>
    <string name="passwordagain">Şifre(Tekrar)</string>
    <string name="save">Kaydet</string>
    <string name="title">Başlık</string>
    <string name="content">Notunuz</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="auth_failed">Register Failed</string>
    <string name="title_activity_notes">NotesActivity</string>
    <string name="title_activity_new__note_">New_Note_Activity</string>

</resources>
