<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="aysusayin.com.mynotebook.New_Note_Activity"
    tools:showIn="@layout/activity_new__note_">

    <aysusayin.com.mynotebook.CustomEditText
        android:id="@+id/title_editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:ems="10"
        android:hint="@string/title"
        android:inputType="textPersonName"
        android:textAllCaps="false"
        android:textColor="@android:color/black"
        android:textColorHint="@android:color/black"
        android:textSize="14sp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:id="@+id/relativeLayout"
        android:layout_below="@+id/title_editText"
        android:layout_alignParentStart="true">

        <EditText
            android:id="@+id/multi_editText2"
            style="@android:style/Widget.DeviceDefault.EditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:ems="10"
            android:fontFamily="casual"
            android:hint="@string/content"
            android:inputType="textMultiLine"
            android:selectAllOnFocus="false"
            android:textAlignment="viewStart"
            android:textColor="@color/common_google_signin_btn_text_light_default"
            android:textColorHint="@color/common_google_signin_btn_text_light_default"
            android:textSize="14sp" />
    </RelativeLayout>

    <aysusayin.com.mynotebook.LoginButton
        android:id="@+id/save_button"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/relativeLayout"
        android:text="@string/save"
        android:textColor="@color/gtred"
        tools:textAllCaps="true" />

</RelativeLayout>
