<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="aysusayin.com.mynotebook.RegisterActivity"
    tools:showIn="@layout/activity_register"
    android:background="@android:color/white">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        app:srcCompat="@drawable/gt"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="69dp" />

    <aysusayin.com.mynotebook.LoginTextView
        android:id="@+id/loginTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="129dp"
        android:gravity="center"
        android:text="@string/welcomeback"
        android:textColor="@android:color/background_dark"
        android:textColorLink="@android:color/background_dark"
        android:textSize="80dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <aysusayin.com.mynotebook.LoginButton
        android:id="@+id/signUpButton"
        style="@style/Base.Widget.AppCompat.Button.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/password_edt"
        android:layout_below="@+id/textInputLayout"
        android:layout_marginTop="32dp"
        android:backgroundTint="@color/greenlight"
        android:elevation="1dp"
        android:text="@string/signup"
        android:textAllCaps="false"
        android:textColor="@android:color/black" />

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textInputLayout"
        android:layout_marginTop="14dp"
        android:layout_below="@+id/password_edt"
        android:layout_alignParentStart="true">

        <EditText
            android:id="@+id/second_password_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/editText6"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_weight="1"
            android:hint="@string/passwordagain"
            android:password="true" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:id="@+id/textInputLayout2"
        android:layout_below="@+id/loginTextView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp">

        <EditText
            android:id="@+id/mail_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="E-mail " />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/password_edt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/textInputLayout2"
        android:layout_alignParentStart="true">

        <EditText
            android:id="@+id/editText6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/textInputLayout2"
            android:layout_below="@+id/textInputLayout2"
            android:hint="@string/password"
            android:password="true" />
    </android.support.design.widget.TextInputLayout>

</RelativeLayout>
